--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
 		<a href="page/popup/connect-wallet.html" class="demo">Connecting wallet</a>
 		<a href="page/popup/connect-wallet-init.html" class="demo">Connecting wallet initializing</a>
 		<a href="page/popup/follower.html" class="demo">Follower</a>
+		<a href="page/popup/edit-your-profile.html" class="demo">Edit your profile</a>
 	</div>
 	<script src="js/index.js"></script>
 </body>
